k8s/minikube/ingress.yaml
# Requires: minikube addons enable ingress
# Add to /etc/hosts: <minikube ip> severedheadsunday.test
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: severed-head-sunday-web
  namespace: severed-head-sunday
spec:
  ingressClassName: nginx
  rules:
    - host: severedheadsunday.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: severed-head-sunday-web
                port:
                  number: 80
